Ansicht Warteinformation Layout korrigiert
Signed-off-by: Martina Findik <Martina.Findik@de-signo.de>

--- a/5.0/queueinfo/QueueList.cshtml
+++ b/5.0/queueinfo/QueueList.cshtml
@@ -34,7 +34,7 @@
       <div>
         @((string)Model.Style["text" + i].Value)
       </div>
-      <div>
+      <div class="queue-status">
         <div>
           <span>
             @if (status.QueueLength > 3)
