--- a/5.0/import/Styles.xml.handlebars
+++ b/5.0/import/Styles.xml.handlebars
@@ -13,7 +13,11 @@
           <name>Zeitpunkt</name>
         </names>
         <content_class type="TextChoose">
+          <text key="+5min">5min nach Termin importieren</text>
           <text key="jit">Zur Terminzeit importieren</text>
+          <text key="-5min">5min vor Termin importieren</text>
+          <text key="-30min">30min vor Termin importieren</text>
+          <text key="-60min">60min vor Termin importieren</text>
           <text key="day">Ganzen Tag importieren</text>
         </content_class>
       </field>
