--- a/5.0/import/ImportFromData.cshtml
+++ b/5.0/import/ImportFromData.cshtml
@@ -13,11 +13,6 @@
 {
     var Model = new FormsModel(this);
 
-    lock (this.GetType())
-    {
-    string cacheKey = "voc_import_list_" + DateTime.Today.ToString("dd-MM-yy") + Request.Url;
-    var idList = Cache.Get(cacheKey) as HashSet<string> ?? new HashSet<string>();
-    
     // Select import time span
     var importMode = (string)Model.Style["im"].FieldInstance.Value;
     DateTime timeTo, timeFrom;
@@ -84,12 +79,26 @@
             ExtractNumber = (string text) => "T" + text.Substring(Math.Max(0, text.Length - 4));
             break;
     }
+    Func <dynamic, DateTime> ReadDateTime;
+    if (!Model.Style.StyleInstance.StyleKey.EndsWith("_ts"))
+    {
+        ReadDateTime = (dynamic item) => DateTime.Parse(item.date) + TimeSpan.Parse(item.time);
+    }
+    else
+    {
+        ReadDateTime = (dynamic item) => DateTime.Parse(item.ts);
+    }
 
     if (timeTo > timeFrom)
     {
+        lock (this.GetType())
+        {
+        string cacheKey = "voc_import_list_" + DateTime.Today.ToString("dd-MM-yy") + Request.Url;
+        var idList = Cache.Get(cacheKey) as HashSet<string> ?? new HashSet<string>();
+
         // filter list by time range [from, to)
         var addList = from dynamic item in Model.DataSource("import")
-                    let start = DateTime.Parse(item.date) + TimeSpan.Parse(item.time)
+                    let start = ReadDateTime(item)
                     where start >= timeFrom && start < timeTo && !idList.Contains(item.id)
                     orderby start ascending
                     select new {
