Textkorrektur- P1_Appointment.cshtml "Ihr Aufruf wird zeitnah zur Terminzeit erfolgen."
Signed-off-by: Martina Findik <Martina.Findik@de-signo.de>

--- a/5.0/printer/P1_Appointment.cshtml
+++ b/5.0/printer/P1_Appointment.cshtml
@@ -116,7 +116,7 @@
               }
               else
               {
-                <p>Bitte noch etwas Geduld, ihr Aufruf wird zeitnahe zur Terminzeit erfolgen.</p>
+                <p>Bitte noch etwas Geduld,Ihr Aufruf wird zeitnah zur Terminzeit erfolgen.</p>
                 <a class="print-now" href='@ticketUrl' style="display: none;"></a>
               }
             }
