--- a/5.0/import/ImportFromData.cshtml
+++ b/5.0/import/ImportFromData.cshtml
@@ -136,7 +136,7 @@
                     var ticket = voc.Instance.NewNumber(ticketNum, queue, category);
                     ticket.Name = item.Name;
                     ticket.Description = item.Desc;
-                    ticket.Phone = item.Start.ToShortTimeString() + ": " + item.Title;
+                    ticket.Phone = item.Start.ToLocalTime().ToShortTimeString() + ": " + item.Title;
                     ticket.ReferenceId = item.Id;
                     voc.Instance.UpdateNumber(ticket);
                     return ticket;
