Preview icons eingefügt

--- a/5.0/display/Styles.xml.handlebars
+++ b/5.0/display/Styles.xml.handlebars
@@ -3,7 +3,7 @@
 
 
   <style key="vocatic_display_2019"
-          file="List.cshtml"
+          file="List.cshtml" preview="preview_list.png"
          interactive="false" target="Forms2">
     <names>
       <name culture="de">vocatis list ({{version}})</name>
@@ -45,7 +45,7 @@
 
 
   <style key="vocatic_display3_2019"
-          file="List3.cshtml"
+          file="List3.cshtml" preview="preview_listmulti.png"
          interactive="false" target="Forms2">
     <names>
       <name culture="de">vocatis list multi ({{version}})</name>
