--- a/5.0/display/List3.cshtml
+++ b/5.0/display/List3.cshtml
@@ -77,7 +77,7 @@ else
         <link href="@Href("display.css")" type="text/css" rel="Stylesheet" />
     </head>
     <body class="list">
-        @Scripts.Render("~/Scripts/jquery", "~/Scripts/forms", "~/Scripts/vocatis.js")
+        @Scripts.Render("~/Scripts/jquery", "~/Scripts/forms", "~/Scripts/vocatis.js", "site.js")
         <header>
             <img src="plattformlogo_01.png" class="plattformlogo" alt="plattformlogo">
             <h1>Wartebereich</h1>
@@ -108,30 +108,6 @@ else
                 <h4>~number~</h4>
             </div>
         }
-        <script type="text/javascript">
-            $(document).ready(function () {
-                var popupContent = $("#popup").html();
-
-                $("#list")
-                    .vocatisList({
-                        interval: 2500
-                    })
-                    .highlightNumbers({
-                        items: "tr:not(.spacer)",
-                        call: function (items) {
-                            var audio = document.getElementById("notify");
-                            if (audio) {
-                                audio.src = $(audio).data("src").replace("~number~", items[0].number).replace("~room~", items[0].room);
-                                audio.play();
-                            }
-                            if (popupContent) {
-                                $("#popup").html(popupContent.replace("~number~", items[0].number).replace("~room~", items[0].room)).show();
-                                window.setTimeout(function () { $("#popup").hide(); }, 10000);
-                            }
-                        }
-                    });
-            });
-        </script>
     </body>
 </html>
 }
