Fix: Fehler, wenn keine Glocke gewählt

--- a/5.0/display/List.cshtml
+++ b/5.0/display/List.cshtml
@@ -75,7 +75,7 @@ else
     @ItemsList(list, cats)
 
     @{
-        var notify = Model.Style["notify"].FieldInstance.Value as string;
+        var notify = Model.Style["notify"].FieldInstance.Value as string ?? "";
         if (notify.Contains("~speechurl~"))
         {
             string speechurl = Stolltec.Forms.Speech.SpeechHandler.Register();
