display: Neue Nummern hervorheben (Erfordert iSign 6.0.29+)

--- a/5.0/display/Styles.xml.handlebars
+++ b/5.0/display/Styles.xml.handlebars
@@ -34,6 +34,15 @@
           <text key="simple">Einfach</text>
         </content_class>
       </field>
+      <field key="hl">
+        <names>
+          <name>Hervorheben</name>
+        </names>
+         <content_class type="TextChoose">
+          <text key="0">Nein</text>
+          <text key="1">Ja</text>
+        </content_class>
+      </field>
       <field key="highlightcat">
         <names>
           <name>Termin Kategorie</name>
@@ -116,6 +125,15 @@
          <content_class type="TextChoose">
           <text key="">Keines</text>
           <text key="simple">Einfach</text>
+        </content_class>
+      </field>
+      <field key="hl">
+        <names>
+          <name>Hervorheben</name>
+        </names>
+         <content_class type="TextChoose">
+          <text key="0">Nein</text>
+          <text key="1">Ja</text>
         </content_class>
       </field>
       <field key="highlightcat">
