--- a/5.0/display/_Layout.cshtml
+++ b/5.0/display/_Layout.cshtml
@@ -8,6 +8,7 @@
         notify = notify.Replace("~speechurl~", speechurl);
     }
     var popup = Model.Style["popup"].FieldInstance.Value as string;
+    var hightlight = Model.Style["hl"].FieldInstance.Value as string == "1";
 }
 <!DOCTYPE html>
 <html>
@@ -38,5 +39,10 @@
             <h4>~number~</h4>
         </div>
     }
+   <script type="text/javascript">
+        $(document).ready(function () {
+            sitejs.initVocatis(2500, @(hightlight ? "true" : "false"));
+        });
+    </script>
 </body>
 </html>
