--- a/5.0/import/Styles.xml.handlebars
+++ b/5.0/import/Styles.xml.handlebars
@@ -51,6 +51,15 @@
         </names>
         <content_class bind="Column" parentField="import" type="TextFree" />
       </field>
+      <field key="tz">
+        <names>
+          <name>Import Zeitzone</name>
+        </names>
+        <content_class type="TextChoose">
+          <text key="srv">Serverzeit</text>
+          <text key="utc">Weltzeit (UTC)</text>
+        </content_class>
+      </field>
       <field key="name">
         <names>
           <name>Name</name>
@@ -186,6 +195,15 @@
           <name>Uhrzeit</name>
         </names>
         <content_class bind="Column" parentField="import" type="TextFree" />
+      </field>
+      <field key="tz">
+        <names>
+          <name>Import Zeitzone</name>
+        </names>
+        <content_class type="TextChoose">
+          <text key="srv">Serverzeit</text>
+          <text key="utc">Weltzeit (UTC)</text>
+        </content_class>
       </field>
       <field key="name">
         <names>
