--- a/5.0/display/List.cshtml
+++ b/5.0/display/List.cshtml
@@ -3,11 +3,25 @@
 @using Stolltec.Forms.Model
 @using Stolltec.Vocatis
 @using Stolltec.Vocatis.Model
+@using System.Web.Caching
+@functions{
+  IEnumerable<DisplayNumber> GetWaitQueueList(CommonGuidId id)
+  {
+    var list = Cache.Get("Vocatis_GetWaitQueueList") as IEnumerable<DisplayNumber>;
+    if (list == null)
+    {
+      list = Vocatis.GetWaitQueueList(id);
+      Cache.Add("Vocatis_GetWaitQueueList", list, null,
+                DateTime.Now.AddSeconds(1), System.Web.Caching.Cache.NoSlidingExpiration, CacheItemPriority.Default, null);
+    }
+    return list;
+  }
+}
 @{
     var Model = new FormsModel(this);
     var id = (CommonGuidId)Model.Style["source"].FieldInstance.Value;
     var cats = (CommonGuidId[])Model.Style["highlightcat"].FieldInstance.Value ?? new CommonGuidId[0];
-    var list = Vocatis.GetWaitQueueList(id).Take(8);
+    var list = GetWaitQueueList(id).Take(8);
 
     // the $.fn.vocatisList function requests the page to update the view
     // We minimize the overhead by just sending the required contents.
