--- a/5.0/queueinfo/QueueList.cshtml
+++ b/5.0/queueinfo/QueueList.cshtml
@@ -8,7 +8,14 @@
 
   // Parse model
   var Model = new FormsModel(this);
-  var queueStatus = @Vocatis.GetWaitQueueOverview();
+  IEnumerable<QueueSummary> queueStatus;
+  queueStatus = Cache.Get("Vocatis_GetWaitQueueOverview") as IEnumerable<QueueSummary>;
+  if (queueStatus == null)
+  {
+    queueStatus = @Vocatis.GetWaitQueueOverview();
+    Cache.Add("Vocatis_GetWaitQueueOverview", queueStatus, null,
+              DateTime.Now.AddSeconds(1), Cache.NoSlidingExpiration, CacheItemPriority.Default, null);
+  }
 
   var buttonCount = (from i in Enumerable.Range(1,8)
                      where !String.IsNullOrEmpty((string)Model.Style["text" + i].Value)
