list: Weitere Töne hinzugefügt

--- a/5.0/display/Styles.xml.handlebars
+++ b/5.0/display/Styles.xml.handlebars
@@ -21,7 +21,16 @@
         </names>
          <content_class type="TextChoose">
           <text key="">Keine</text>
-          <text key="tone.mp3">Standard</text>
+          <text key="assets/tone.mp3">Standard</text>
+          <text key="assets/done-for-you-612.mp3">Done for you</text>
+          <text key="assets/eventually-590.mp3">Eventually</text>
+          <text key="assets/goes-without-saying-609.mp3">Goes without saying</text>
+          <text key="assets/happy-ending-415.mp3">Happy ending</text>
+          <text key="assets/inflicted-601.mp3">Inflicted</text>
+          <text key="assets/no-more-waiting-209.mp3">No more waiting</text>
+          <text key="assets/piece-of-cake-611.mp3">Piece of cake</text>
+          <text key="assets/quite-impressed-565.mp3">Quite impressed</text>
+          <text key="assets/slow-spring-board-longer-tail-571.mp3">Slow spring board</text>
           <text key="~speechurl~?voice=Microsoft Hedda Desktop&amp;text=~number~ bitte zu ~room~">Sprachausgabe (Hedda)</text>
         </content_class>
       </field>
@@ -105,7 +114,16 @@
         </names>
          <content_class type="TextChoose">
           <text key="">Keine</text>
-          <text key="tone.mp3">Standard</text>
+          <text key="assets/tone.mp3">Standard</text>
+          <text key="assets/done-for-you-612.mp3">Done for you</text>
+          <text key="assets/eventually-590.mp3">Eventually</text>
+          <text key="assets/goes-without-saying-609.mp3">Goes without saying</text>
+          <text key="assets/happy-ending-415.mp3">Happy ending</text>
+          <text key="assets/inflicted-601.mp3">Inflicted</text>
+          <text key="assets/no-more-waiting-209.mp3">No more waiting</text>
+          <text key="assets/piece-of-cake-611.mp3">Piece of cake</text>
+          <text key="assets/quite-impressed-565.mp3">Quite impressed</text>
+          <text key="assets/slow-spring-board-longer-tail-571.mp3">Slow spring board</text>
           <text key="~speechurl~?voice=Microsoft Hedda Desktop&amp;text=~number~ bitte zu ~room~">Sprachausgabe (Hedda)</text>
         </content_class>
       </field>
