list: Schreibfehler korrigiert

--- a/5.0/display/Styles.xml.handlebars
+++ b/5.0/display/Styles.xml.handlebars
@@ -11,7 +11,7 @@
     <fields>
       <field key="source">
         <names>
-          <name>Wateschlange</name>
+          <name>Warteschlange</name>
         </names>
         <content_class type="VocatisQueue"  />
       </field>
