--- a/5.0/import/Styles.xml.handlebars
+++ b/5.0/import/Styles.xml.handlebars
@@ -45,6 +45,12 @@
         </names>
         <content_class bind="Column" parentField="import" type="TextFree" />
       </field>
+      <field key="ref">
+        <names>
+          <name>Referenz</name>
+        </names>
+        <content_class bind="Column" parentField="import" type="TextFree" />
+      </field>
       <field key="ts">
         <names>
           <name>Zeitpunkt</name>
@@ -181,6 +187,12 @@
       <field key="id">
         <names>
           <name>ID</name>
+        </names>
+        <content_class bind="Column" parentField="import" type="TextFree" />
+      </field>
+      <field key="ref">
+        <names>
+          <name>Referenz</name>
         </names>
         <content_class bind="Column" parentField="import" type="TextFree" />
       </field>
