--- a/5.0/printer/PL_Layout.cshtml
+++ b/5.0/printer/PL_Layout.cshtml
@@ -30,6 +30,7 @@
  
   @RenderBody()
   
+  @if (langs.Count > 1) {
   <footer>
     @foreach (var l in langs)
     {
@@ -39,6 +40,7 @@
       </a>
     }
   </footer>
+  }
 
   <script type="text/javascript">
   $(document).ready(function() {
