--- a/5.0/printer/TicketDefault.cshtml
+++ b/5.0/printer/TicketDefault.cshtml
@@ -5,6 +5,9 @@
   var Model = new FormsModel(this);
 
   var id = Model.Style["id"].Value;
+
+  var lang = PageData["lang"];
+  var string_map = PageData["string_map"];
 }
 <!DOCTYPE html>
 <html>
