Änderung Text "Kunden" zu "Personen"
Signed-off-by: Martina Findik <Martina.Findik@de-signo.de>

--- a/5.0/queueinfo/QueueList.cshtml
+++ b/5.0/queueinfo/QueueList.cshtml
@@ -46,7 +46,7 @@
           <span>
             @if (status.QueueLength > 3)
             {
-              <text>aktuell warten<b> @status.QueueLength Kunden</b></text><text> <b></b></text>
+              <text>aktuell warten<b> @status.QueueLength Personen</b></text><text> <b></b></text>
             }
             else
             {
